opam-version: "1.2"
maintainer: "Alessandro Strada <alessandro.strada@gmail.com>"
authors: [ "Alessandro Strada" ]
license: "MIT"
homepage: "https://github.com/astrada/ppx_bs_css"
dev-repo: "https://github.com/astrada/ppx_bs_css.git"
bug-reports: "https://github.com/astrada/ppx_bs_css/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"
  "ocaml-migrate-parsetree"
  "menhir"
  "sedlex"
]
available: [ ocaml-version >= "4.02.3" ]
